# Tax-consultant-APP

./: README.md  chainlit.md  docs.html  main.py  pyproject.toml  requirements.txt  setup.py
client/: client.py
docs/: 1684-ec40ccb82c41fb8d.js.download
docs_files/: 2c4152bead085a07.css  hotjar-6382967.js.download  layout-06063843479c8654.js.download  webpack-acbbbb548492d4a6.js.download
server/: custom.py  reference.json  tools.py
src/: ingestion.py  prompt.py
src/test/: agent_test.py  scrape_test.py
